# GenAIBI

./: .env.example  .gitignore  README.md  claude.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
data/sample/: margin_transactions.json
dbt/: dbt_project.yml  profiles.yml.example
dbt/models/: sources.yml
dbt/models/marts/: margin_risk.yml
dbt/models/staging/: stg_margin_calls.sql  stg_margin_calls.yml
docs/: ARCHITECTURE_JOURNEY.md  README,md  Semantic_Layer_Teaser_From_Notebooks.pptx
evals/: golden_queries.yaml
notebooks/: gemini_integration_test.ipynb  phase1_validation.ipynb
scripts/: bootstrap.sh  run_local.sh  seed_sample_data.py
src/adapters/: adapter_factory.py  base_adapter.py  duckdb_adapter.py  sql_adapter.py
src/api/: main.py  routes_health.py  routes_metrics.py  schemas.py
src/core/: config.py  enums.py  logging.py
src/llm/: gemini_client.py  narration_service.py  nl_query_service.py  prompt_templates.py
src/services/: metric_service.py  query_executor.py  semantic_registry.py
tests/: conftest.py
tests/contract/: test_data_contract.py
tests/integration/: test_api.py
tests/unit/: test_config.py  test_duckdb_adapter.py  test_enums.py  test_narration_service.py  test_query_executor.py  test_semantic_registry.py
