[build-system]
requires = ["setuptools >= 69.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "semantic-genai-bi"
version = "0.1.0"
description = "Deterministic, audit-ready natural-language business intelligence over margin and risk data."
requires-python = ">= 3.11"
dependencies = [
    "fastapi >= 0.110.0",
    "uvicorn >= 0.27.0",
    "pydantic >= 2.0",
    "pydantic-settings >= 2.0",
    "duckdb >= 0.10.0",
    "pyyaml >= 6.0",
    "httpx >= 0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest >= 8.0",
    "pytest-cov >= 4.0",
    "pytest-asyncio >= 0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --tb=short"
